--- a/src/partials/_banner.scss
+++ b/src/partials/_banner.scss
@@ -2,6 +2,7 @@
   position: relative;
   background-image: linear-gradient(to right, $white, rgb(245, 245, 250));
   padding-top: 157px;
+  overflow-x: hidden;
 }
 .banner-dots__image {
   position: absolute;
@@ -52,6 +53,8 @@
   z-index: 1;
   height: auto;
   width: 100%;
+  display: block;
+  overflow: hidden;
   max-height: 598px;
   max-width: 693px;
 }
@@ -98,6 +101,7 @@
   }
   .banner-text__h1 {
     font-size: 26px;
+    line-height: 32px;
   }
   .banner-text__paragraph {
     font-size: 14px;
